[package]
authors = [ "MaidSafe Developers <dev@maidsafe.net>" ]
description = "A 'proof' of bandwidth, cpu and storage for nodes in a decentralised network."
documentation = "https://docs.rs/resource_proof"
homepage = "https://maidsafe.net"
license = "MIT OR BSD-3-Clause"
name = "resource_proof"
readme = "README.md"
repository = "https://github.com/maidsafe/resource_proof"
version = "1.0.31"
edition = "2018"

[dependencies]
clap = "~2.33.0"
rand = "~0.4.1"
tiny-keccak = "~1.5.0"

[target."cfg(unix)".dependencies]
termion = "~1.5.1"
